infrastructure/deployment/environments/staging/patch-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    spec:
      containers:
      - name: postgres
        resources:
          requests:
            cpu: 150m
            memory: 192Mi
          limits:
            cpu: 400m
            memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    spec:
      containers:
      - name: backend
        resources:
          requests:
            cpu: 150m
            memory: 192Mi
          limits:
            cpu: 400m
            memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  selector:
    matchLabels:
      app: front
  template:
    spec:
      containers:
      - name: front
        resources:
          requests:
            cpu: 150m
            memory: 192Mi
          limits:
            cpu: 400m
            memory: 512Mi
